Airlines - Made CRUD apis for airlines - Added airlines to swagger
